--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?jumhlqa#1" target="_blank">首页</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/1?mwjla" target="_blank">动态网</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/2?jqsfsfqah" target="_blank">大纪元</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/4?dqnql" target="_blank">看中国</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/pHh5q?ptxhyudv" target="_blank">新生网</a> | <a href="https://dep6yudto3kbo.cloudfront.net/tktpt?hsodf" target="_blank">阿波罗网</a> | <a href="https://dol9bue5bysdj.cloudfront.net/Mjpvu?wuepc" target="_blank">干净世界</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/10?wdyuog" target="_blank">退党服务</a> | <a href="https://dme0bxbvomkno.cloudfront.net/Rffqf?eoxcgkf" target="_blank">明慧广播</a> | <a href="https://d15m60lsma25jk.cloudfront.net/nw9Vn?plaxznys" target="_blank">传奇时代</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/AF9AG?fneuzqjl" target="_blank">新境界影视</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/zqMQA?jkvfvvru" target="_blank">文昭谈论</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/7?asnym" target="_blank">明慧</a></p><p><a href="https://d22owz1tif1d5u.cloudfront.net/9?giqfilw" target="_blank">大法</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/3?epmfr" target="_blank">新唐人</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/obAhT?kvjou" target="_blank">人民报</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/xXNHu?vmtyfxlkw" target="_blank">放光明</a> | <a href="https://dycmgeziwp90b.cloudfront.net/5?inprlr" target="_blank">新纪元</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/6?nynub" target="_blank">希望之声</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/11?plommkf" target="_blank">无界网络</a> | <a href="https://d1fejrztdgsube.cloudfront.net/Pueji?qdsqx" target="_blank">追查国际</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/16?rkmofrkd" target="_blank">明慧之窗</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/LdvzZ?hjqni" target="_blank">细语人生</a> | <a href="https://d2oemtubh889hy.cloudfront.net/fBn3r?jrfgznsyw" target="_blank">新世纪影视</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/PUWMb?szwhg" target="_blank">江峰时刻</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/8?mxcwhx" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?cnxxdp#1" target="_blank">首页</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/1?urxbxd" target="_blank">动态网</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/2?pqmnyyte" target="_blank">大纪元</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/4?zcwckn" target="_blank">看中国</a> | <a href="https://d11leod1im7q2u.cloudfront.net/pHh5q?gkzwiowz" target="_blank">新生网</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/tktpt?guqbmmazp" target="_blank">阿波罗网</a> | <a href="https://dcz6rimunj42y.cloudfront.net/Mjpvu?pnhrhseqa" target="_blank">干净世界</a> | <a href="https://dmt6yqw0je6jw.cloudfront.net/10?taqzbhmfb" target="_blank">退党服务</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/Rffqf?rbihezbyj" target="_blank">明慧广播</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/nw9Vn?dybkuff" target="_blank">传奇时代</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/AF9AG?flsodmlw" target="_blank">新境界影视</a> | <a href="https://d1lulvfep8g527.cloudfront.net/zqMQA?fzddfs" target="_blank">文昭谈论</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/7?thtdgozia" target="_blank">明慧</a></p><p><a href="https://d2aqxvnyguf0uq.cloudfront.net/9?bodexjda" target="_blank">大法</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/3?hwjccb" target="_blank">新唐人</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/obAhT?nxyymhif" target="_blank">人民报</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/xXNHu?pjqadnw" target="_blank">放光明</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/5?gkbna" target="_blank">新纪元</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/6?gjmwf" target="_blank">希望之声</a> | <a href="https://dmt6yqw0je6jw.cloudfront.net/11?ilyorx" target="_blank">无界网络</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/Pueji?mhzxngr" target="_blank">追查国际</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/16?edkzjyw" target="_blank">明慧之窗</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/LdvzZ?mxbnbbctl" target="_blank">细语人生</a> | <a href="https://d124e4v75n9sum.cloudfront.net/fBn3r?jmeuselx" target="_blank">新世纪影视</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/PUWMb?qwterxze" target="_blank">江峰时刻</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/8?dlgpjhok" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146981.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/12/id14146987-GettyImages-1891114342-320x200.jpg"><p align="center">组图：巨浪袭加州海岸 “如世界末日一样”</p></a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146981.md#1" title="组图：巨浪袭加州海岸 “如世界末日一样”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14146987-GettyImages-1891114342-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146951.md#1" title="俄大规模空袭乌克兰 联合国安理会严词批评""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14142091-000_348T7DQ-320x200.jpg">&nbsp;</a>
@@ -17,7 +17,7 @@
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147134.md#1">广西女子实名举报国企党委书记强奸未遂</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147089.md#1">财新网发表社论后 传胡舒立被警方约谈</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147102.md#1">涉中共体坛腐败 央视前名嘴行贿千万被公诉</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147123.md#1">帮助女儿了解中国传统文化 父亲开始创作儿童读物</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147123.md#1">帮助女儿了解中国传统文化 父亲开始创作儿童读物</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147117.md#1">被困男子靠雨水野外生存六天终获救 堪称圣诞奇迹</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146332.md#1">董军接任国防部长 李尚福下落仍不明</a><br>
@@ -26,7 +26,6 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143030.md#1">海外人士分析王志安下场：为中共卖命都很惨</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146206.md#1">雷军称小米汽车不逊特斯拉 之后股价大跌</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145752.md#1">美军秘密X-37B飞机成功发射升空 剑指中共</a><br>
-<a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145446.md#1">军工巨头倒台 中共军工系或面临灭顶之灾</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146005.md#1">湖南长沙爆发学生抗争 传校方被迫让步</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146363.md#1">中共统计称去年GDP多报五千亿 专家解读</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145874.md#1">【菁英论坛】三胡挑战中南海 胡舒立最后挽歌</a><br>
@@ -99,8 +98,8 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142534.md#1">【新闻大破解】不只介选 中共对自由世界颠覆战</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142380.md#1">作家吁驱逐中共特务 盘点王志安洗地言论</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142372.md#1">中国金融危机深重 银行高管频出事</a><br>
-<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3hytpf21h3dge.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.226.118.217/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 57,517</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3snni869juclv.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://220.133.28.46/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 57,517</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
