--- a/gb/23/12/30/n14147229.md
+++ b/gb/23/12/30/n14147229.md
@@ -23,17 +23,15 @@
 <p>责任编辑：瑛智</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146466.md#1">时政评论家观神韵 感到“中国人心中的痛”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146490.md#1">神韵二胡打动公司老板：两根弦的变化令人惊叹</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146506.md#1">学院总裁观神韵：饱含情感 美得让人落泪</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146530.md#1">神韵舞蹈出色 演奏精湛 公司顾问深受感动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146535.md#1">企业主：神韵是伟大演出 带给孩子美好记忆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146565.md#1">国际学校校长赞神韵：乱世中传递希望</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/30/n10882697.md#1" target="_blank">谢显宁：董时进、董时光兄弟生死劫</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/14/n9958294.md#1" target="_blank">金剑：中央集权制绝对不是封建社会（之二）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
